<resources>
    <string name="app_name">Tips Calculator</string>

    <string name="tax_rate">Tax Rate</string>
    <string name="tax_hint">Enter tax rate here</string>
    <string name="tax_or">OR</string>
    <string name="zip_hint">Enter zip code here</string>

    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <string name="items_direction">Enter each item or skip directly to the subtotal.</string>

    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="grand_total">Grand Total:</string>
</resources>
