<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tax_rate"
            style="?android:listSeparatorTextViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tax_rate_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="@string/tax_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/tax_or"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <EditText
                android:id="@+id/zip_code_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:maxLength="6"
                android:inputType="number"
                android:hint="@string/zip_hint"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:singleLine="true"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/items_direction"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:text="ADD"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:text="DEL"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listview_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/subtotal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            style="?android:listSeparatorTextViewStyle"/>

        <ListView
            android:id="@+id/listview_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/total_before_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="Total"/>

        <TextView
            android:id="@+id/tips_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="Tips"/>

        <TextView
            android:id="@+id/grand_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="Grand Total"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
